2013-07-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex4ht-c.tex, tex4ht-t4ht.tex: Always include system headers
	after <kpathsea/config.h>.  (Backport from TeX Live.)

2013-03-01  Radhakrishnan CV  <cvr@river-valley.org>

	* tex4ht-ooffice.tex: \NoFonts ... \EndNoFonts added in
	{footnotetext} configuration to avoid font size anomalies in
	footnotes when footnote text has accented characters. Patch
	submitted by Nicolai Rostov, Feb 28, 2013 at 4:40 AM.

2013-01-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Backport from TeX Live.
	* tex4ht-c.tex, tex4ht-t4ht.tex: Drop set but unused variables.

2012-07-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to W32TeX (backport from TeX Live).
	* tex4ht-c.tex, tex4ht-t4ht.tex [WIN32]:
	Use binary mode for output files.
	Pass program name string to kpse_set_program_name.
	Must not free argv.

2011-09-18  Karl Berry  <karl@gnu.org>

	* tex4ht-unicode.tex (<double acute code>): \H{O} is 0150,
	not 0151; http://www.fileformat.info/info/unicode/char/150/index.htm.
	Report from Tibor Tomacs, 18 Sep 2011 12:34:09,
	http://puszcza.gnu.org.ua/bugs/?147.

2010-12-25  Karl Berry  <karl@gnu.org>

	* tex4ht-c.tex (<trace context>): allow -hA to enable all tracing.
	(<find tex4ht.env>): fatal error if we don't find it, since the
	next thing we do is seek on the file which crashes anyway.
	(<kpathsea tex4ht.env>): use --format=othertext so we can find
	tex4ht.env.  However, this is not enough to find the .htf files,
	so it's still not possible to run the program as anything except
	`tex4ht'.  So it goes.

2010-12-24  Karl Berry  <karl@gnu.org>

	* tex4ht-c.tex,
	* tex4ht-t4ht.tex: attempt to document which files I think these
	programs read and write.  Fix a couple typos.

2010-12-23  Karl Berry  <karl@gnu.org>

	* tex4ht-c.tex,
	* tex4ht-t4ht.tex,
	* tex4ht-htcmd.tex: rewrite some doc uses of "win32".

	* common-info.tex (\CleanComment): lengthy comment about ultimate
	failure trying to make the info option work with mzlatex.
